// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetchModule should return a request action 1`] = `
Object {
  "meta": Object {
    "API_REQUEST": "FETCH_MODULE_CS1010S",
  },
  "payload": Object {
    "method": "GET",
    "url": "test://MOCK_MOD_DETAILS_URL/CS1010S",
  },
  "type": "FETCH_MODULE",
}
`;

exports[`fetchModuleList should return a request action 1`] = `
Object {
  "meta": Object {
    "API_REQUEST": "FETCH_MODULE_LIST",
  },
  "payload": Object {
    "method": "GET",
    "url": "test://MOCK_MOD_LIST_URL",
  },
  "type": "FETCH_MODULE_LIST",
}
`;
